<resources>
    <string name="app_name">CST438_Project1_group8</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="create_login_name">Username</string>
    <string name="create_login_password">Password</string>
    <string name="create_login_button">Create</string>
    <string name="create_login_return_button">Return</string>


    <string name="keywords">Keywords</string>
    <string name="cityZip">City or zip code</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="useMyLocation">Use my location</string>
    <string name="myJobs">My Jobs</string>
    <string name="company_name">Company Name</string>
    <string name="job_title">Job Title</string>
    <string name="location">Location</string>
    <string name="apply_on_company_site">Apply On Company Site</string>
    <string name="job_description">Job Description</string>
    <string name="login">Login</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="don_t_have_an_account_tap_here">Don\'t have an account? Tap Here!</string>

</resources>