<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_search_conditions"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_search_term"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/keywords"
        android:inputType="textPersonName"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_search_location"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_search_term"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/et_search_term"
        android:layout_toRightOf="@+id/et_search_term"
        android:ems="10"
        android:hint="@string/cityZip"
        android:inputType="textPersonName"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/et_search_location"
        android:text="@string/search"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_search_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_current_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_reset_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_search"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:text="@string/reset"
        android:textColor="@color/purple_500"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/cb_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_search_location"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_toStartOf="@+id/tv_reset_search"
        android:layout_toLeftOf="@+id/tv_reset_search"
        android:text="@string/useMyLocation" />

</RelativeLayout>